# ros

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: get_cpm.cmake  quality-checks.cmake
docs/: index.adoc
include/: ros.hpp
include/ros/: access.hpp  apply.hpp  concepts.hpp  constant.hpp  error.hpp  eval.hpp  field.hpp  filter.hpp  literals.hpp  operations.hpp  reflection.hpp  reg.hpp  type_traits.hpp  utils.hpp
test/: .clang-tidy  CMakeLists.txt  mock_bus.hpp  test_registers.hpp
test/compile_fail/: CMakeLists.txt  assign_ro_register_bits.cpp  duplicate_field_in_apply.cpp  duplicate_register_in_apply.cpp  field_value_exceeds_length.cpp  read_non_readable_field.cpp  read_wo_register.cpp  register_value_too_wide.cpp  test_registers.hpp  write_non_writable_field.cpp  write_ro_field.cpp
test/unit/: CMakeLists.txt  test_access_types.cpp  test_apply_field.cpp  test_apply_reg.cpp  test_constexpr.cpp  test_field.cpp  test_literals.cpp  test_reg.cpp
